modified:   _config.yml 	modified:   package-lock.json 	modified:   package.json 	modified:   scaffolds/draft.md 	modified:   scaffolds/post.md 	deleted:    source/_drafts/20180124.md 	modified:   source/_posts/20180124.md 	new file:   source/_posts/System-analysis-and-design-hw2.md 	new file:   source/_posts/System-analysis-and-design-hw2/Kanban.png 	new file:   source/_posts/System-analysis-and-design_hw1.md 	new file:   source/_posts/ss-libev.md

--- a/source/_posts/20180124.md
+++ b/source/_posts/20180124.md
@@ -54,13 +54,13 @@ description: “勤劳”的蜜蜂睡在阴暗的蜂巢里
 >
 > 看着桌面的一切，回想着下午
 >
-> 突然感动害怕
+> 突然感到害怕
 >
 > 原来不再是下午了啊
 >
 > 我怀念那个不清醒的早晨了
 
-回想自己所做的，总是觉得不充实，总是觉得在浪费时间
+回想自己所做的，总觉得不充实，总觉得在浪费时间
 
 无头苍蝇，闻到哪香，就往哪飞
 
