--- a/source/_drafts/后端学习杂记.md
+++ b/source/_drafts/后端学习杂记.md
@@ -19,4 +19,43 @@ express
 - 如何组织
 - 用户认证
 - express-resource
-- session
+- session， redis管理
+
+RESTFUL框架
+
+- 基本要求
+  - URL只能使用名词指定资源
+  - 使用HTTP里的动词实现资源的添加、删除等操作
+- best practice
+  - URL root
+  - API version
+  - 名词，推荐复数
+  - 保证HEAD、GET方法是安全的
+  - 资源地址推荐嵌套结构
+  - 警惕返回结果大小。如果过大，进行分页或加入限制
+  - 使用正确HTTP状态码表示访问状态
+  - *授权机制说明OAuth2.0*
+
+API文档工具
+
+- RAML
+- API blueprint
+- Swagger
+
+nginx搭建
+
+- 安装
+
+
+
+
+
+> references:
+>
+> RESTFUL：https://www.zhihu.com/question/27785028
+>
+> nginx安装：https://www.nginx.cn/install
+>
+> nginx配置：https://www.nginx.cn/591.html、http://blog.chinaunix.net/uid-192074-id-3132678.html
+>
+> nginx+nodejs：http://www.ttlsa.com/nginx/nginx-node-js/
