--- a/source/_posts/图像检测的神经网络模型发展总结.md
+++ b/source/_posts/图像检测的神经网络模型发展总结.md
@@ -1,5 +1,5 @@
 ---
-title: Deep Learning Summary 2
+title: 图像检测的神经网络模型发展总结
 tags:
   - 深度学习
   - R-CNN
@@ -30,7 +30,7 @@ date: 2018-04-14 15:50:12
 
 ### 2.1 基本架构图
 
-![R-CNN](Deep-Learning-Summary-2/R-CNN.png)
+![R-CNN](图像检测的神经网络模型发展总结/R-CNN.png)
 
 ### 2.2 基本结构分成三个模块
 
@@ -69,7 +69,7 @@ date: 2018-04-14 15:50:12
 
 >  SPP后续操作都是和R-CNN一致
 
-![SPP](Deep-Learning-Summary-2/SPP.png)
+![SPP](图像检测的神经网络模型发展总结/SPP.png)
 
 **问题**：
 
@@ -80,7 +80,7 @@ date: 2018-04-14 15:50:12
 
 ### 4.1 基本架构图
 
-![Fast-R-CNN](Deep-Learning-Summary-2/Fast-R-CNN.png)
+![Fast-R-CNN](图像检测的神经网络模型发展总结/Fast-R-CNN.png)
 
 ### 4.2 基本模块
 
@@ -122,7 +122,7 @@ date: 2018-04-14 15:50:12
 
 #### 5.1.1 基本架构图
 
-![Faster-R-CNN](Deep-Learning-Summary-2/Faster-R-CNN.png)
+![Faster-R-CNN](图像检测的神经网络模型发展总结/Faster-R-CNN.png)
 
 #### 5.1.2 机制
 
@@ -138,7 +138,7 @@ date: 2018-04-14 15:50:12
 
 > anchor 👇
 
-![anchor](Deep-Learning-Summary-2/anchor.png)
+![anchor](图像检测的神经网络模型发展总结/anchor.png)
 
 ​	训练好RPN后就能，将提取的proposals用到Fast R-CNN中，进行分类和bbox regressor；其实这里Fast R-CNN需要和RPN网络是共享特征的，即输入的特征来自一个卷积网络的特征提取；那么这样子多个loss如何训练呢，这里需要一定的训练技巧：轮流训练，联合训练（由于我没有操作经验，这里没有细说）
 
