--- a/source/_posts/软件工程关键词概览.md
+++ b/source/_posts/软件工程关键词概览.md
@@ -1,11 +1,11 @@
 ---
-title: 系统设计与分析HW1
+title: 软件工程关键词概览
 date: 2018-03-09 14:15:41
 tags:
-    - homework
+	- 软件工程
 categories:
     - 计算机科学
-description: 系统设计与分析HW1
+description: 软件工程关键词概览
 ---
 
 ## 1. 简单题
